appId: com.duckduckgo.mobile.android
androidWebViewHierarchy: devtools
tags:
    - securityTest
---
- retry:
      maxRetries: 3
      commands:
            - launchApp:
                clearState: true
            - runFlow: ../shared/skip_all_onboarding.yaml
            - tapOn:
                id: "omnibarTextInput|inputField"
            - inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-about-blank-rewrite.html"
            - pressKey: Enter

            - tapOn: "Start"
            # This test is expected to load "about:blank" then duckduckgo.com, not remain on the current page with spoofed content.
            - extendedWaitUntil:
                notVisible: "Not DDG."  # Spoofed content not visible
                timeout: 10000
            - tapOn:
                id: "omnibarTextInput|inputField"
            - copyTextFrom:
                id: "omnibarTextInput|inputField"
            - assertTrue: ${maestro.copiedText == "about:blank" || maestro.copiedText == "https://duckduckgo.com/"}
