appId: com.duckduckgo.mobile.android.debug
tags:
    - securityTest
---
- launchApp:
    clearState: true
- runFlow: ../shared/onboarding.yaml
# Test 1
- doubleTapOn:
    id: "omnibarTextInput"
- inputText: "https://privacy-test-pages.site/security/address-bar-spoofing/spoof-new-window.html"
- pressKey: Enter
- tapOn: "Got It"
- tapOn: "New Window"
- tapOn: 
    id: "com.duckduckgo.mobile.android.debug:id/tabCount"
- assertVisible:
    text: "URL Spoofing - New Window Rewrite"
- tapOn: "URL Spoofing - New Window Rewrite"
- tapOn: "Spoof"
- tapOn: 
    id: "com.duckduckgo.mobile.android.debug:id/tabCount"
- assertVisible:
    text: "DuckDuckGo"
- tapOn: "DuckDuckGo"
# Now check the address bar hasn't been spoofed
- copyTextFrom:
    id: "omnibarTextInput"
- assertTrue: ${maestro.copiedText == "https://broken.third-party.site/security/abs/no-content"}
- assertNotVisible: "Your address bar has been spoofed"
