appId: com.duckduckgo.mobile.android
---
- assertVisible:
    text: ".*kinda creepy.*"
- tapOn: "let's do it!"
- assertVisible:
    text: ".*try visiting one of your favorite sites.*"
