appId: com.duckduckgo.mobile.android
---
- runFlow: ../shared/browser_screen/click_on_menu_button.yaml
- tapOn: "Settings"
- scrollUntilVisible:
   element: "Appearance"
   direction: DOWN
- tapOn: "Appearance"